Fix often overlapping display with fixed/remebered size

--- a/src/popup/qrcode.css
+++ b/src/popup/qrcode.css
@@ -1,11 +1,13 @@
 /* prevent vertical scrollbar */
 html, body {
-  /* prevent overflow at bottom */
+  width: 100%;
+  min-height: 250px;
+}
+.preventScrollbar {
+  /* prevent overflow at bottom (applied to body in JS) */
   overflow: hidden;
   max-height: 100%;
-  width: 100%;
   height: 100%;
-  min-height: 250px;
 }
 
 .qrcode {
